changed the file structure

--- a/src/calculator/src/html/index.html
+++ b/src/calculator/src/html/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Calculator</title>
-    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="../scss/style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:100,300&display=swap"
       rel="stylesheet"
@@ -54,6 +54,6 @@
         <input type="button" class="button equally" value="=" />
       </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="../js/index.js"></script>
   </body>
 </html>
